fixing previeous templates and adding Apropos and Dicionnaire templates

--- a/loughati/index.html
+++ b/loughati/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=mRhXHtRl"></script>
   </body>
 </html>
